WebCore:

Reviewed by Darin.

        - fix http://bugs.webkit.org/show_bug.cgi?id=15010
          <rdar://problem/5423956> REGRESSION (r25000-r25065): Table rendering broken by a recent nightly

        Test: fast/table/max-width-integer-overflow.html

        Avoid integer overflows when dealing with maximum widths by
        1) using floating point arithmetic when summing or multiplying column max widths
        2) capping max widths at INT_MAX / 2

        * rendering/AutoTableLayout.cpp:
        (WebCore::AutoTableLayout::calcPrefWidths):
        (WebCore::AutoTableLayout::calcEffectiveWidth):
        (WebCore::AutoTableLayout::layout):

LayoutTests:

        Reviewed by Darin.

        - test for http://bugs.webkit.org/show_bug.cgi?id=15010
          <rdar://problem/5423956> REGRESSION (r25000-r25065): Table rendering broken by a recent nightly

        * fast/table/max-width-integer-overflow.html: Added.
        * platform/mac/fast/table: Added.
        * platform/mac/fast/table/max-width-integer-overflow-expected.checksum: Added.
        * platform/mac/fast/table/max-width-integer-overflow-expected.png: Added.
        * platform/mac/fast/table/max-width-integer-overflow-expected.txt: Added.



Canonical link: https://commits.webkit.org/19682@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@25171 268f45cc-cd09-0410-ab3c-d52691b4dbfc