WebCore/rendering/AutoTableLayout.cpp
@@ -254,8 +254,9 @@ void AutoTableLayout::calcPrefWidths(int& minWidth, int& maxWidth)
     int spanMaxWidth = calcEffectiveWidth();
     minWidth = 0;
     maxWidth = 0;
-    int maxPercent = 0;
-    int maxNonPercent = 0;
+    float maxPercent = 0;
+    float maxNonPercent = 0;
+    bool scaleColumns = shouldScaleColumns(m_table);
 
     // We substitute 0 percent by (epsilon / percentScaleFactor) percent in two places below to avoid division by zero.
     // FIXME: Handle the 0% cases properly.
@@ -265,20 +266,21 @@ void AutoTableLayout::calcPrefWidths(int& minWidth, int& maxWidth)
     for (unsigned int i = 0; i < m_layoutStruct.size(); i++) {
         minWidth += m_layoutStruct[i].effMinWidth;
         maxWidth += m_layoutStruct[i].effMaxWidth;
-        if (m_layoutStruct[i].effWidth.isPercent()) {
-            int percent = min(m_layoutStruct[i].effWidth.rawValue(), remainingPercent);
-            int pw = (m_layoutStruct[i].effMaxWidth * 100 * percentScaleFactor) / max(percent, epsilon);
-            remainingPercent -= percent;
-            maxPercent = max(pw,  maxPercent);
-        } else {
-            maxNonPercent += m_layoutStruct[i].effMaxWidth;
+        if (scaleColumns) {
+            if (m_layoutStruct[i].effWidth.isPercent()) {
+                int percent = min(m_layoutStruct[i].effWidth.rawValue(), remainingPercent);
+                float pw = static_cast<float>(m_layoutStruct[i].effMaxWidth) * 100 * percentScaleFactor / max(percent, epsilon);
+                maxPercent = max(pw,  maxPercent);
+                remainingPercent -= percent;
+            } else
+                maxNonPercent += m_layoutStruct[i].effMaxWidth;
         }
     }
 
-    if (shouldScaleColumns(m_table)) {
+    if (scaleColumns) {
         maxNonPercent = maxNonPercent * 100 * percentScaleFactor / max(remainingPercent, epsilon);
-        maxWidth = max(maxNonPercent,  maxWidth);
-        maxWidth = max(maxWidth, maxPercent);
+        maxWidth = max(maxWidth, static_cast<int>(min(maxNonPercent, INT_MAX / 2.0f)));
+        maxWidth = max(maxWidth, static_cast<int>(min(maxPercent, INT_MAX / 2.0f)));
     }
 
     maxWidth = max(maxWidth, spanMaxWidth);
@@ -300,7 +302,7 @@ void AutoTableLayout::calcPrefWidths(int& minWidth, int& maxWidth)
  */
 int AutoTableLayout::calcEffectiveWidth()
 {
-    int tMaxWidth = 0;
+    float tMaxWidth = 0;
 
     unsigned int nEffCols = m_layoutStruct.size();
     int hspacing = m_table->hBorderSpacing();
@@ -326,10 +328,10 @@ int AutoTableLayout::calcEffectiveWidth()
         int col = m_table->colToEffCol(cell->col());
         unsigned int lastCol = col;
         int cMinWidth = cell->minPrefWidth() + hspacing;
-        int cMaxWidth = cell->maxPrefWidth() + hspacing;
+        float cMaxWidth = cell->maxPrefWidth() + hspacing;
         int totalPercent = 0;
         int minWidth = 0;
-        int maxWidth = 0;
+        float maxWidth = 0;
         bool allColsArePercent = true;
         bool allColsAreFixed = true;
         bool haveAuto = false;
@@ -385,12 +387,12 @@ int AutoTableLayout::calcEffectiveWidth()
                 // can't satify this condition, treat as variable
                 w = Length();
             } else {
-                int spanMax = max(maxWidth, cMaxWidth);
+                float spanMax = max(maxWidth, cMaxWidth);
                 tMaxWidth = max(tMaxWidth, spanMax * 100 * percentScaleFactor / w.rawValue());
 
                 // all non percent columns in the span get percent vlaues to sum up correctly.
                 int percentMissing = w.rawValue() - totalPercent;
-                int totalWidth = 0;
+                float totalWidth = 0;
                 for (unsigned int pos = col; pos < lastCol; pos++) {
                     if (!(m_layoutStruct[pos].effWidth.isPercent()))
                         totalWidth += m_layoutStruct[pos].effMaxWidth;
@@ -398,7 +400,7 @@ int AutoTableLayout::calcEffectiveWidth()
 
                 for (unsigned int pos = col; pos < lastCol && totalWidth > 0; pos++) {
                     if (!(m_layoutStruct[pos].effWidth.isPercent())) {
-                        int percent = percentMissing * m_layoutStruct[pos].effMaxWidth / totalWidth;
+                        int percent = percentMissing * static_cast<float>(m_layoutStruct[pos].effMaxWidth) / totalWidth;
                         totalWidth -= m_layoutStruct[pos].effMaxWidth;
                         percentMissing -= percent;
                         if (percent > 0)
@@ -422,7 +424,7 @@ int AutoTableLayout::calcEffectiveWidth()
                 }
 
             } else {
-                int maxw = maxWidth;
+                float maxw = maxWidth;
                 int minw = minWidth;
                 
                 // Give min to variable first, to fixed second, and to others third.
@@ -439,7 +441,7 @@ int AutoTableLayout::calcEffectiveWidth()
 
                 for (unsigned int pos = col; maxw >= 0 && pos < lastCol && minw < cMinWidth; pos++) {
                     if (!(m_layoutStruct[pos].width.isFixed() && haveAuto && fixedWidth <= cMinWidth)) {
-                        int w = max(m_layoutStruct[pos].effMinWidth, maxw ? (cMinWidth * m_layoutStruct[pos].effMaxWidth / maxw) : cMinWidth);
+                        int w = max(m_layoutStruct[pos].effMinWidth, static_cast<int>(maxw ? cMinWidth * static_cast<float>(m_layoutStruct[pos].effMaxWidth) / maxw : cMinWidth));
                         w = min(m_layoutStruct[pos].effMinWidth+(cMinWidth-minw), w);
                                                 
                         maxw -= m_layoutStruct[pos].effMaxWidth;
@@ -453,7 +455,7 @@ int AutoTableLayout::calcEffectiveWidth()
         if (!(w.isPercent())) {
             if (cMaxWidth > maxWidth) {
                 for (unsigned int pos = col; maxWidth >= 0 && pos < lastCol; pos++) {
-                    int w = max(m_layoutStruct[pos].effMaxWidth, maxWidth ? (cMaxWidth * m_layoutStruct[pos].effMaxWidth / maxWidth) : cMaxWidth);
+                    int w = max(m_layoutStruct[pos].effMaxWidth, static_cast<int>(maxWidth ? cMaxWidth * static_cast<float>(m_layoutStruct[pos].effMaxWidth) / maxWidth : cMaxWidth));
                     maxWidth -= m_layoutStruct[pos].effMaxWidth;
                     cMaxWidth -= w;
                     m_layoutStruct[pos].effMaxWidth = w;
@@ -470,7 +472,7 @@ int AutoTableLayout::calcEffectiveWidth()
     }
     m_effWidthDirty = false;
 
-    return tMaxWidth;
+    return static_cast<int>(min(tMaxWidth, INT_MAX / 2.0f));
 }
 
 /* gets all cells that originate in a column and have a cellspan > 1
@@ -534,8 +536,8 @@ void AutoTableLayout::layout()
     int totalRelative = 0;
     int numAuto = 0;
     int numFixed = 0;
-    int totalAuto = 0;
-    int totalFixed = 0;
+    float totalAuto = 0;
+    float totalFixed = 0;
     int totalPercent = 0;
     int allocAuto = 0;
     int numAutoEmptyCellsOnly = 0;
@@ -638,7 +640,7 @@ void AutoTableLayout::layout()
         for (int i = 0; i < nEffCols; i++) {
             Length &width = m_layoutStruct[i].effWidth;
             if (width.isAuto() && totalAuto != 0 && !m_layoutStruct[i].emptyCellsOnly) {
-                int w = max(int(m_layoutStruct[i].calcWidth), available * m_layoutStruct[i].effMaxWidth / totalAuto);
+                int w = max(m_layoutStruct[i].calcWidth, static_cast<int>(available * static_cast<float>(m_layoutStruct[i].effMaxWidth) / totalAuto));
                 available -= w;
                 totalAuto -= m_layoutStruct[i].effMaxWidth;
                 m_layoutStruct[i].calcWidth = w;
@@ -655,7 +657,7 @@ void AutoTableLayout::layout()
         for (int i = 0; i < nEffCols; i++) {
             Length &width = m_layoutStruct[i].effWidth;
             if (width.isFixed()) {
-                int w = available * m_layoutStruct[i].effMaxWidth / totalFixed;
+                int w = available * static_cast<float>(m_layoutStruct[i].effMaxWidth) / totalFixed;
                 available -= w;
                 totalFixed -= m_layoutStruct[i].effMaxWidth;
                 m_layoutStruct[i].calcWidth += w;
